--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -43,5 +43,11 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>microphone description</string>
+    <key>NSCameraUsageDescription</key>
+    <string>camera description.</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>photos description.</string>
 </dict>
 </plist>
